syntax = "proto3";
package blog.v1;
option go_package = "github.com/kkweon/grpc-rest-via-gateway/blog/v1";

import "google/type/datetime.proto";
import "google/api/annotations.proto";

service BlogService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {
        option (google.api.http) = {
            post: "/v1/blog"
            body: "*"
        };
    }
    rpc GetPosts (GetPostsRequest) returns (GetPostsResponse) {
        option (google.api.http) = {
            get: "/v1/blog/{post_id}"
        };
    }
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse) {
        option (google.api.http) = {
            delete: "/v1/blog/{post_id}"
        };
    }
}

// CREATE
message CreatePostRequest {
    string content = 1;
}

message CreatePostResponse {
    Post post = 1;
}

// READ
message GetPostsRequest {
    int64 post_id = 1;
}

message GetPostsResponse {
    repeated Post posts = 1;
}

// DELETE
message DeletePostRequest {
    int64 post_id = 1;
}

message DeletePostResponse {

}


message Post {
    int64 id = 1;
    string content = 2;
    google.type.DateTime created_at = 3;
}
